--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -26,13 +26,11 @@
       event.preventDefault();
       const u = $("#username").val();
       const p = $("#pwd").val();
-      {{!-- console.log(u, p); --}}
       $.post("/createUser", { userName: u, password: p }, function (responce) {
-        if (responce.indexOf("/")===-1) {
+        if (responce.indexOf("/") === -1)
           alert(responce);
-        }else{
+        else
           location.replace(responce);
-        }
       });
     });
   })
